@@ -1,6 +1,8 @@
 2010-11-09  Donal K. Fellows  <dkf@users.sf.net>
 
-	* tests/oo.test: Various tests for memory leaks.
+	* generic/tclOOMethod.c (ProcedureMethodVarResolver): [Bug 3105999]:
+	* tests/oo.test:	Make sure that resolver structures that are
+				only temporarily needed get squelched.
 
 2010-11-05  Jan Nijtmans  <nijtmans@users.sf.net>
 
